# duel

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  RECRUITERS.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  opencode-manual.yml  opencode-review.yml  opencode-scheduled.yml  opencode-triage.yml  opencode.yml  pages.yml
config/: siemens.example.yaml
docs/: index.html  site-data.json  summary.json
examples/: replay_extended.json  replay_sample.json
reports/: leaderboard.md  summary.json
reports/runs/: 2026-04-21T21-17-40z-oracle-oracle-replay-903727870de8.json  2026-04-21T21-17-40z-oracle-oracle-replay-cf9f4d6572f0.json  2026-04-21T21-17-43z-baseline-always-a-replay-35ad59861ee3.json  2026-04-21T21-17-43z-baseline-always-a-replay-b802eac5a751.json
src/: agent.py  gemini.py  main.py
src/config/: __init__.py  config.py
src/duel/: __init__.py  browser.py  cli.py  configuration.py  costs.py  models.py  parsing.py  replay.py  reporting.py  runner.py  storage.py
src/duel/providers/: base.py  factory.py  gemini_provider.py  offline.py  openai_provider.py
tests/: test_configuration.py  test_docs_assets.py  test_parsing.py  test_provider_usage_and_costs.py  test_replay_reporting.py
tools/: generate_leaderboard_svg.py  generate_site_data.py  generate_summary_chart_svg.py
