[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "duel"
version = "0.1.0"
description = "Benchmark platform for RTVS Duel LLM evaluations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.65.0",
    "openai>=2.24.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "selenium>=4.41.0",
]

[project.scripts]
duel = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
